<resources>
    <string name="app_name">Anagram</string>
    <string name="title">Urch Dance Anagram</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="dance">Picture of creator Keevan Dance</string>
    <string name="urch">Picture of creator Jayden Urch</string>
    <string name="danceAbout">This is Keevan Dance. He is cool guy</string>
    <string name="urchAbout">This is Jayden Urch. He is cooler guy</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="total">Total</string>
    <string name="menu">Menu</string>
    <string name="results">Results</string>
    <string name="found">Found Words</string>
    <string name="submit">Submit Word</string>
    <string name="typed">Word</string>
    <string name="letters">Letters</string>
    <string-array name="wordScrammbled">
        <item>B</item>
        <item>T</item>
        <item>S</item>
        <item>A</item>
        <item>E</item>
    </string-array>
    <string-array name="answers">
        <item>ABETS</item>
        <item>BASTE</item>
        <item>BETAS</item>
        <item>BEAST</item>
        <item>BEATS</item>
        <item>TABES</item>
        <item>BATES</item>
        <item>STAB</item>
        <item>BAST</item>
        <item>BEST</item>
        <item>BETS</item>
        <item>TABS</item>
        <item>BETA</item>
        <item>BATS</item>
        <item>BATE</item>
        <item>SABE</item>
        <item>BEAT</item>
        <item>BASE</item>
        <item>ABET</item>
        <item>BET</item>
        <item>TAB</item>
        <item>BES</item>
        <item>BAT</item>
        <item>ABS</item>
        <item>SAB</item>
        <item>BAS</item>
        <item>SETA</item>
        <item>TEAS</item>
        <item>BE</item>
        <item>BA</item>
        <item>SEAT</item>
        <item>AB</item>
        <item>ATES</item>
        <item>SATE</item>
        <item>EAST</item>
        <item>EATS</item>
        <item>ETAS</item>
        <item>TAS</item>
        <item>SET</item>
        <item>SAT</item>
        <item>SEA</item>
        <item>EAT</item>
        <item>ATE</item>
        <item>SAE</item>
        <item>TAE</item>
        <item>ETA</item>
        <item>TEA</item>
        <item>AE</item>
        <item>ET</item>
        <item>ES</item>
        <item>AS</item>
        <item>AT</item>
        <item>TA</item>
     </string-array>
</resources>
