<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.urch.dance.anagram.About">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/dance"
        android:src="@drawable/keevan"
        android:background="#000000"
        android:padding="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="175dp"
        android:textColor="#000000"
        android:text="@string/danceAbout"
        android:id="@+id/danceAbout"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textColor="#000000"
        android:text="@string/about"
        android:id="@+id/about"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/urch"
        android:src="@drawable/jayden"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#000000"
        android:padding="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="175dp"
        android:textColor="#000000"
        android:text="@string/urchAbout"
        android:id="@+id/urchAbout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
