<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_difficulty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.urch.dance.anagram.Difficulty">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textSize="50sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/easy"
        android:id="@+id/easy"
        android:background="#00D0FF"
        android:textSize="35sp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/medium"
        android:id="@+id/medium"
        android:background="#00AAFF"
        android:textSize="35sp"
        android:layout_marginTop="290dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/hard"
        android:id="@+id/hard"
        android:background="#005FFF"
        android:textSize="35sp"
        android:layout_marginTop="380dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
