<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.urch.dance.anagram.Results">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textSize="50sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="252dp"
        android:layout_height="65dp"
        android:text="@string/correct"
        android:id="@+id/correct"
        android:background="#00FFAA"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="250dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:text="@string/about"
        android:id="@+id/correctNo"
        android:background="#AAFFAA"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"/>

    <TextView
        android:layout_width="252dp"
        android:layout_height="65dp"
        android:text="@string/incorrect"
        android:id="@+id/incorrect"
        android:background="#FF5555"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="175dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:text="@string/about"
        android:id="@+id/incorrectNo"
        android:background="#FFAAAA"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="175dp"/>

    <TextView
        android:layout_width="252dp"
        android:layout_height="65dp"
        android:text="@string/total"
        android:id="@+id/total"
        android:background="#00EEFF"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="100dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:text="@string/about"
        android:id="@+id/totalNo"
        android:background="#AAEEFF"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/menu"
        android:id="@+id/menu"
        android:background="#EEEEEE"
        android:textSize="35sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
