<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.urch.dance.anagram.Game">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found"
        android:textSize="50sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:id="@+id/textView" />

    <ListView
        android:id="@+id/listview"
        android:scrollbars="vertical"
        android:layout_width="fill_parent"
        android:layout_height="200dip"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/found_container"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:orientation="horizontal"
        tools:context="com.urch.dance.anagram.Game">

        <TextView
            android:text="@string/typed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/typed"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/word_container"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:orientation="horizontal"
        tools:context="com.urch.dance.anagram.Game">

        <TextView
            android:text="@string/letters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/letters"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:background="#005FFF"
        android:textSize="35sp"/>
</LinearLayout>
